--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@
 }
 #page-footer {
 	margin-top:100px;
-	background:cornsilk;
+	background: #fffcee;
 	min-height:150px;
 }
 #page-content {
@@ -44,4 +44,17 @@
 }
 #skip-link:focus {
 	background:blue;
+}
+#footer {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	font-weight: 400;
+	font-size: 16px;
+}
+ul#footer {
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
 }
